--- a/VotingSystemBackend/VotingProcess/VotingProcess.csproj
+++ b/VotingSystemBackend/VotingProcess/VotingProcess.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
     <PackageReference Include="Dapper" Version="2.0.123" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.5" />
   </ItemGroup>
 
 </Project>
